Add comprehensive testing infrastructure to streaming_client_demo
- Add CMake testing support for both C++ and Python versions
- Include video recording and frame validation tests
- Add test configuration generation with proper recording settings
- Follow endoscopy_tool_tracking testing patterns for consistency
- Enable BUILD_TESTING conditional compilation
- Add golden frame validation using video_validation.py utility

--- a/applications/streaming_client_demo/cpp/CMakeLists.txt
+++ b/applications/streaming_client_demo/cpp/CMakeLists.txt
@@ -124,4 +124,53 @@ install(
     DESTINATION bin
 )
 
+# Add testing
+if(BUILD_TESTING)
+
+  set(RECORDING_DIR ${CMAKE_CURRENT_BINARY_DIR}/recording_output)
+  set(SOURCE_VIDEO_BASENAME cpp_streaming_client_demo_output)
+  set(VALIDATION_FRAMES_DIR ${CMAKE_SOURCE_DIR}/applications/streaming_client_demo/testing/)
+
+  file(MAKE_DIRECTORY ${RECORDING_DIR})
+
+  # Configure the yaml file for testing
+  file(READ "${CMAKE_CURRENT_SOURCE_DIR}/streaming_client_demo.yaml" CONFIG_FILE)
+  string(REPLACE "count: 0" "count: 10" CONFIG_FILE ${CONFIG_FILE})
+  string(REPLACE "record_type: \"none\"" "record_type: \"visualizer\"" CONFIG_FILE ${CONFIG_FILE})
+  string(REPLACE "directory: \"./recording_output\"" "directory: \"${RECORDING_DIR}\"" CONFIG_FILE ${CONFIG_FILE})
+  string(REPLACE "basename: \"streaming_client_demo_output\"" "basename: \"${SOURCE_VIDEO_BASENAME}\"" CONFIG_FILE ${CONFIG_FILE})
+  
+  # Set test mode parameters
+  string(REPLACE "repeat: true" "repeat: false" CONFIG_FILE ${CONFIG_FILE})
+  string(REPLACE "realtime: true" "realtime: false" CONFIG_FILE ${CONFIG_FILE})
+
+  file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/streaming_client_demo_testing.yaml" ${CONFIG_FILE})
+
+  # Add test for application execution
+  add_test(NAME streaming_client_demo_cpp_test
+           COMMAND streaming_client_demo
+                   --config ${CMAKE_CURRENT_BINARY_DIR}/streaming_client_demo_testing.yaml
+                   --data "${HOLOHUB_DATA_DIR}/endoscopy"
+           WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+  set_tests_properties(streaming_client_demo_cpp_test PROPERTIES
+                       PASS_REGULAR_EXPRESSION "Reach end of file or playbook count reaches to the limit. Stop ticking.|Application has finished running."
+                       FAIL_REGULAR_EXPRESSION "[^a-z]Error;ERROR;Failed")
+
+  # Add a test to check the validity of the frames
+  add_test(NAME streaming_client_demo_cpp_render_test
+      COMMAND python3 ${CMAKE_SOURCE_DIR}/utilities/video_validation.py
+      --source_video_dir ${RECORDING_DIR}
+      --source_video_basename ${SOURCE_VIDEO_BASENAME}
+      --output_dir ${RECORDING_DIR}
+      --validation_frames_dir ${VALIDATION_FRAMES_DIR}
+      WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+  )
+
+  set_tests_properties(streaming_client_demo_cpp_render_test PROPERTIES
+  DEPENDS streaming_client_demo_cpp_test
+  PASS_REGULAR_EXPRESSION "Valid video output!"
+  )
+
+endif()
+
 
