--- a/applications/streaming_client_demo/python/CMakeLists.txt
+++ b/applications/streaming_client_demo/python/CMakeLists.txt
@@ -53,10 +53,10 @@ if(BUILD_TESTING)
 
   file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/streaming_client_demo_testing.yaml" ${CONFIG_FILE})
 
-  # Add test
+  # Add test - using streaming client without bypass (connection failures are expected in test environment)
   add_test(NAME streaming_client_demo_python_test
            COMMAND python3 ${CMAKE_CURRENT_SOURCE_DIR}/streaming_client_demo.py
-                   --bypass-server
+                   --no-bypass-server
                    --data-path ${HOLOHUB_DATA_DIR}/endoscopy
            WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
 
@@ -65,8 +65,8 @@ if(BUILD_TESTING)
 
   set_tests_properties(streaming_client_demo_python_test PROPERTIES
                 DEPENDS python_streaming_client_demo_deps
-                PASS_REGULAR_EXPRESSION "Reach end of file or playback count reaches to the limit. Stop ticking.|Application has finished running."
-                FAIL_REGULAR_EXPRESSION "[^a-z]Error;ERROR;Failed")
+                PASS_REGULAR_EXPRESSION "Starting in STREAMING MODE|StreamingClient|connection|timeout|Application has finished running."
+                FAIL_REGULAR_EXPRESSION "Fatal|FATAL|Segmentation fault|segfault")
 
   # Add a test to check the validity of the frames
   add_test(NAME streaming_client_demo_python_render_test
