Fix C++ test regex to match new test mode output
🔧 CMakeLists.txt Updates:
- Update PASS_REGULAR_EXPRESSION to match both INFRASTRUCTURE and FUNCTIONAL test modes
- Changed from exact string match to flexible pattern: 'Test PASSED: C++ StreamingClient.*test successful'
- Supports both 'INFRASTRUCTURE test successful' and 'FUNCTIONAL test successful' outputs

--- a/applications/streaming_client_demo/cpp/CMakeLists.txt
+++ b/applications/streaming_client_demo/cpp/CMakeLists.txt
@@ -168,7 +168,7 @@ if(BUILD_TESTING)
   set_tests_properties(streaming_client_demo_cpp_test PROPERTIES
                        ENVIRONMENT "LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/operators/streaming_client:${CMAKE_BINARY_DIR}/operators/streaming_client/lib:${CMAKE_SOURCE_DIR}/operators/streaming_client/lib:$ENV{LD_LIBRARY_PATH}"
                        TIMEOUT 90
-                       PASS_REGULAR_EXPRESSION "Test PASSED: C\\+\\+ StreamingClient functionality validated successfully"
+                       PASS_REGULAR_EXPRESSION "Test PASSED: C\\+\\+ StreamingClient.*test successful"
                        FAIL_REGULAR_EXPRESSION "Test FAILED:")
 
   # Frame validation test disabled - current streaming client setup doesn't record output
