Op: Add slang_shader_op check for minimum compiler version
Reflects observed GLIBC and GLIBCXX errors when building with gcc < 13:

```
/usr/bin/ld: .../holohub-internal/build/endoscopy_tool_tracking/_deps/slang-src/lib/libslang.so: undefined reference to `fmodf@GLIBC_2.38'
```

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

--- a/operators/slang_shader/cpp/CMakeLists.txt
+++ b/operators/slang_shader/cpp/CMakeLists.txt
@@ -15,6 +15,12 @@
 
 cmake_minimum_required(VERSION 3.20)
 
+
+# Check minimum required GCC version for Slang release package
+if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND (CMAKE_C_COMPILER_VERSION VERSION_LESS "13.0.0" OR CMAKE_CXX_COMPILER_VERSION VERSION_LESS "13.0.0"))
+    message(FATAL_ERROR "GCC version ${CMAKE_CXX_COMPILER_VERSION} is too old. Need GCC 13.0.0 or newer to compile with libslang.so.")
+endif()
+
 # Fetch Slang
 include(FetchContent)
 FetchContent_Declare(
