App: Make slang_shader_op optional in Endoscopy Tool Tracking
SlangShaderOp is not supported on some target bare metal platforms such
as IGX OS 1.1.2. Update the Endoscopy Tool Tracking application to
re-enable building and running without SlangShaderOp on target platforms
not meeting SlangShaderOp build requirements.

Signed-off-by: Tom Birdsong <tbirdsong@nvidia.com>

--- a/applications/CMakeLists.txt
+++ b/applications/CMakeLists.txt
@@ -49,8 +49,11 @@ add_holohub_application(endoscopy_out_of_body_detection DEPENDS OPERATORS aja_so
 add_holohub_application(endoscopy_tool_tracking DEPENDS
                         OPERATORS lstm_tensor_rt_inference
                                   tool_tracking_postprocessor
+                        OPTIONAL  aja_source
+                                  deltacast_videomaster
                                   slang_shader
-                                  OPTIONAL deltacast_videomaster yuan_qcap vtk_renderer aja_source)
+                                  yuan_qcap
+                                  vtk_renderer)
 
 add_subdirectory(h264)
 
